--- a/.github/workflows/profile_workflow.yml
+++ b/.github/workflows/profile_workflow.yml
@@ -9,12 +9,6 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Icons
-        uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.topics.icons.svg
-          token: NOT_NEEDED
-          base: ""
-          plugin_topics: yes
-          plugin_topics_limit: 0
-          plugin_topics_mode: icons
+          token: ${{ secrets.METRICS_TOKEN }}
