--- a/.github/workflows/profile_workflow.yml
+++ b/.github/workflows/profile_workflow.yml
@@ -9,14 +9,6 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Featured star list languages
-        uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.starlists.languages.svg
-          token: NOT_NEEDED
-          base: ""
-          plugin_starlists: yes
-          plugin_starlists_languages: yes
-          plugin_starlists_limit_languages: 8
-          plugin_starlists_limit_repositories: 0
-          plugin_starlists_only: Awesome
+          token: ${{ secrets.METRICS_TOKEN }}
